--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "node backend/server.js"
   },
-  
   "type": "module",
   "keywords": [],
   "author": "",
@@ -20,7 +19,8 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
     "passport": "^0.7.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
