--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "socket.io": "^4.8.1"
