--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "ping": "node scripts/pingServer.js"
   },
   "type": "module",
   "keywords": [],
@@ -20,6 +21,7 @@
     "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
     "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "socket.io": "^4.8.1"
