--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,13 +10,13 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/MyGithub(3).png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.png",
+      "src": "/MyGithub(1).png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
