--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,7 +10,7 @@
   "scope": "/",
   "icons": [
     {
-      "src": "https://github.com/user-attachments/assets/711f3c64-a793-41bf-a777-d0b897c0f248",
+      "src": "/MyGithub(1).png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
