--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ NOTIFICATION_SYSTEM.md
 NOTIFICATION_ARCHITECTURE.md
 NOTIFICATION_CHECKLIST.md
 NOTIFICATION_IMPLEMENTATION_SUMMARY.md
+
+# Offline Sync & Notification Documentation
+OFFLINE_NOTIFICATION_FIX.md
+NOTIFICATION_SETUP_GUIDE.md
+TESTING_CHECKLIST.md
+CHANGES_SUMMARY.md
+QUICK_REFERENCE.md
+OFFLINE_SYNC_README.md
+DEPLOYMENT_CHECKLIST.md
+IMPLEMENTATION_REPORT.md
